--- a/retinaloct-with-pytorch.ipynb
+++ b/retinaloct-with-pytorch.ipynb
@@ -162,7 +162,7 @@
     "## Data Cleaning and normalization\n",
     "\n",
     "- Images are in grayscale, set 1 output channel\n",
-    "- Riseze images to 160x320 pixeles, help in memory management\n",
+    "- Resize images to 160x320 pixeles, help in memory management\n",
     "- Normalize images using Z Scale: Z-score scaling transforms data so that it has a mean of 0 and a standard deviation of 1."
    ]
   },
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ce225cc0",
    "metadata": {
     "execution": {
@@ -336,7 +336,7 @@
    ],
    "source": [
     "eda_dataset = datasets.ImageFolder('/kaggle/input/retinal-oct-c8/RetinalOCT_Dataset/RetinalOCT_Dataset/train', transform=to_tensor_transform)\n",
-    "eda_dataset.class_to_idx"
+    "eda_dataset.class_to_idx # encoding of classes"
    ]
   },
   {
